unpackaged/main/default/objects/Campaign/fields/EDY_ORGCUSTOM__Old_Name__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
    <label>Old Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>