unpackaged/main/default/objects/Campaign/fields/Primary_Offer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Offer__c</fullName>
    <label>Primary Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Free Trial</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Contact Us Form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>