unpackaged/main/default/objects/Campaign/recordTypes/SDO_Marketing_ChildCampaign.recordType-meta.xml
<RecordType>
    <fullName>SDO_Marketing_ChildCampaign</fullName>
    <active>true</active>
    <description>Child Campaign to a parent campaign</description>
    <label>Child Campaign</label>
</RecordType>