unpackaged/main/default/objects/Campaign/listViews/SDO_All_Campaigns.listView-meta.xml
<ListView>
    <fullName>SDO_All_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - Campaigns</label>
</ListView>